tests/semantic_analysis/error/variable_redefine.c
variable_redefine\.c:3:9: error:.*